--- a/style.css
+++ b/style.css
@@ -57,6 +57,16 @@ nav#navbar ul li a:hover {
     background-color: #002266; /* Darker blue background on hover */
 }
 
+/**/
+.logo-container {
+    display: flex;
+    align-items: center;
+}
+
+.navbar-logo {
+    height: 50px; /* Adjust based on your preference */
+    width: auto;
+}
 /* Section styling for content */
 section {
     padding: 20px;
